# Auto_judge

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md
ds_lz/题面/: 2018.md  2019.md  2020.md  2021.md  2022.md
scripts/: build-windows-nsis.sh
src/: App.tsx  api.ts  env.d.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
