[package]
name = "auto-judge"
version = "0.1.0"
description = "数据结构自动生题与本地评测桌面应用"
authors = ["Auto Judge"]
edition = "2021"

[lib]
name = "auto_judge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "auto-judge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
